Fixed some layout issues with the contact details.

--- a/client/app/contact/contact.scss
+++ b/client/app/contact/contact.scss
@@ -4,8 +4,6 @@
 	margin-bottom: 25px;
 
 	.social {
-		padding-top: 15px;
-		padding-bottom: 15px;
-		height: 20px;
+		padding-bottom: 30px;
 	}
 }
